[tool.poetry]
name = "oasis"
version = "0.1.0"
description = "Open Architecture Security Interception Suite - A comprehensive penetration testing platform"
authors = ["OASIS Team <team@oasis-pentest.org>"]
readme = "README.md"
packages = [{include = "oasis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pydantic = "^2.5.0"
asyncio = "^3.4.3"
uvloop = {version = "^0.19.0", markers = "sys_platform != 'win32'"}
fastapi = "^0.104.0"
aiohttp = "^3.9.0"
mitmproxy = "^10.1.0"
cryptography = "^41.0.0"
msgpack = "^1.0.7"
prometheus-client = "^0.19.0"
PyQt6 = "^6.6.0"
websockets = "^12.0"
redis = "^5.0.0"
psycopg2-binary = "^2.9.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
hypothesis = "^6.88.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
coverage = "^7.3.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
oasis = "oasis.main:main"
oasis-cli = "oasis.cli.main:main"
oasis-api = "oasis.api.app:run_server"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "property: marks tests as property-based tests",
    "performance: marks tests as performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pyasn1.*",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore:enable_cleanup_closed ignored:DeprecationWarning:aiohttp.connector",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]